--- a/asset/bookSessionComponents/minDoorBookSessionBookingCart.css
+++ b/asset/bookSessionComponents/minDoorBookSessionBookingCart.css
@@ -5,6 +5,7 @@
     --green--: rgb(163, 163, 110);
     --grey--: rgb(117, 117, 117);
     --brown--: rgb(141, 105, 89);
+    --bezhevuy--: rgb(248, 243, 236);
 }
 
 .bookingCart{
@@ -13,6 +14,7 @@
     align-items: flex-start;
     gap: 150px;
     padding: 0 20px;
+    margin-bottom: 150px;
 }
 
 .left_Side{
@@ -46,7 +48,7 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
-    background-color: rgb(248, 243, 236);
+    background-color: var(--bezhevuy--);
     padding: 25px;
     width: 60%;
     height: 530px;
